--- a/writeups/tryhackme/index.html
+++ b/writeups/tryhackme/index.html
@@ -36,6 +36,7 @@
 
 
 		 <div class="wp-menu">
+			 <a  href="/writeups/tryhackme/CyberHeroes.html" class="nav-link">Tryhackme CyberHeroes Writeup</a>
 			 <a  href="#" class="nav-link">Tryhackme  Writeup</a>
 			 <a  href="#" class="nav-link">Tryhackme  Writeup</a>
 			 <a  href="#" class="nav-link">Tryhackme  Writeup</a>
