--- a/index.html
+++ b/index.html
@@ -34,16 +34,24 @@
                          <a href="https://github.com/0zxyx" class="github"><i class="fa-brands fa-github github"></i></a> 
                          <a href="https://twitter.com/0zxyx" class="twitter"><i class="fa-brands fa-twitter"></i></a> 
                  </div>
-
+		
+		 
                  <div class="wp-menu">
                          <a  href="/writeups/" class="nav-link">Writeups</a>
                  </div>
+		 
 
+		
+		 <input type="text" placeholder="Search" class="search-box" >
+
+                 <div class="result">
+			 <script src="/js/search.js"></script>
+		 </div>
 
                 <a href="#" class="gotop">
                 <i class="fa-solid fa-arrow-up"></i></a>
 
-                <script src="/js/main.js"></script>
+		<script src="/js/main.js"></script>
 
 
          </body>
