--- a/writeups/tryhackme/index.html
+++ b/writeups/tryhackme/index.html
@@ -8,6 +8,7 @@
                  <meta name="author" content="0zxyx">
 		 <link rel="stylesheet" href="/css/styles.css">
 		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
 		 <title> TryHackMe Writeups | 0zxyx.com</title>
@@ -27,7 +28,14 @@
 		
 		<a href="https://www.buymeacoffee.com/0zxyx">
                          <img  class="buymelogo" alt="Buy me a coffee" src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg">
-                 </a>
+		 </a>
+
+
+                 <input type="text" placeholder="Search" class="search-box" >
+
+                 <div class="result">
+                         <script src="/js/search.js"></script>
+                 </div>
 
                  <div class="icon-list">
                          <a href="https://github.com/0zxyx" class="github"><i class="fa-brands fa-github"></i></a> 
@@ -36,7 +44,7 @@
 
 
 		 <div class="wp-menu">
-			 <a  href="/writeups/tryhackme/CyberHeroes.html" class="nav-link">Tryhackme CyberHeroes Writeup</a>
+			 <a  href="/writeups/tryhackme/CyberHeroes.php" class="nav-link">Tryhackme CyberHeroes Writeup</a>
 			 <a  href="#" class="nav-link">Tryhackme  Writeup</a>
 			 <a  href="#" class="nav-link">Tryhackme  Writeup</a>
 			 <a  href="#" class="nav-link">Tryhackme  Writeup</a>
