--- a/writeups/tryhackme/CyberHeroes.html
+++ b/writeups/tryhackme/CyberHeroes.html
@@ -28,7 +28,14 @@
         <a href="https://www.buymeacoffee.com/0zxyx">
                 <img  class="buymelogo" alt="Buy me a coffee" src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg">
         </a>
-	
+
+
+        <input type="text" placeholder="Search" class="search-box" >
+
+        <div class="result">
+                <script src="/js/search.js"></script>
+        </div>
+
 	<p class="para">Today we are going to do <a href="https://tryhackme.com/room/cyberheroes">CyberHeroes</a> from tryhackme.</p>
 
 <div class="container">
@@ -93,9 +100,11 @@
 
         <a href="#" class="gotop">
                 <i class="fa-solid fa-arrow-up"></i>
-        </a>
+	</a>
+
 
         <script src="/js/main.js"></script>
+        <script src="/js/scroll.js"></script>
 
 
 </div>
