--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
                  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-                 <title>0zxyx.com | Writeups</title>
+                 <title>0zxyx.com | Home</title>
          </head>
 
          <body>
 
 
-                 <h1 class="head">Welcome to 0zxyx</h1>
+                 <h1 class="head">0zxyx.com</h1>
+
+		 <a href="javascript:void(0);" class="menu">
+			 <i class="fa-solid fa-bars"></i>
+		 </a>
 
 
                  <div class="nav-menu">
-                         <a href="/" class="nav-link">HOME</a>
-                         <a href="/writeups/" class="nav-link">WRITEUPS</a>
-                         <a href="https://twitter.com/messages/compose?recipient_id=1241195067806605314" class="nav-link">CONTACT</a>
-                         <a href="/blog/" class="nav-link">BLOG</a>
+                         <a href="/" class="nav-link">Home</a>
+                         <a href="/cheatsheets/" class="nav-link">Cheatsheets</a>
+                         <a href="/writeups/" class="nav-link">Writeups</a>
+                         <a href="/blog/" class="nav-link">Blog</a>
+                         <a href="https://twitter.com/messages/compose?recipient_id=1241195067806605314" class="nav-link">Contact</a>
                  </div>
 
 		 <a href="https://www.buymeacoffee.com/0zxyx">
@@ -37,7 +42,9 @@
 		
 		 
                  <div class="wp-menu">
+                         <a  href="/cheatsheets/" class="nav-link">CheatSheets</a>
                          <a  href="/writeups/" class="nav-link">Writeups</a>
+                         <a  href="/blog/" class="nav-link">Blog</a>
                  </div>
 		 
 
@@ -48,10 +55,8 @@
 			 <script src="/js/search.js"></script>
 		 </div>
 
-                <a href="#" class="gotop">
-                <i class="fa-solid fa-arrow-up"></i></a>
 
-		<script src="/js/main.js"></script>
+		<script src="/js/scroll.js"></script>
 
 
          </body>
