--- a/writeups/hackthebox/index.html
+++ b/writeups/hackthebox/index.html
@@ -18,14 +18,17 @@
 		 <h1 class="head">HackTheBox Writeups</h1>
 
 
-		 <p class="para">These Writep are password protected <br> use sha1sum of root or ntlm hash to unlock.</p>
+		 <a href="javascript:void(0);" class="menu">
+			 <i class="fa-solid fa-bars"></i>
+		 </a>
 
 
 		 <div class="nav-menu">
-                         <a href="/" class="nav-link">HOME</a>
-                         <a href="/writeups/" class="nav-link">WRITEUPS</a>
-                         <a href="https://twitter.com/messages/compose?recipient_id=1241195067806605314" class="nav-link">CONTACT</a>
-                         <a href="/blog/" class="nav-link">BLOG</a>
+                         <a href="/" class="nav-link">Home</a>
+			 <a href="/cheatsheets/" class="nav-link">Cheatsheets</a>
+                         <a href="/writeups/" class="nav-link">Writeups</a>
+                         <a href="/blog/" class="nav-link">Blog</a>
+                         <a href="https://twitter.com/messages/compose?recipient_id=1241195067806605314" class="nav-link">Contact</a>
 		 </div>
 		
 		<a href="https://www.buymeacoffee.com/0zxyx">
@@ -52,6 +55,13 @@
 			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
 			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
 		 </div>
+
+		 <a href="#" class="gotop">
+			 <i class="fa-solid fa-arrow-up"></i>
+		 </a>
+
+		 <script src="/js/top.js"></script>
+		 <script src="/js/scroll.js"></script>
 
 	 </body>
  </html> 
