--- a/writeups/tryhackme/index.html
+++ b/writeups/tryhackme/index.html
@@ -19,11 +19,16 @@
 
 		 <h1 class="head">TryHackMe Writeups</h1>
 
+		 <a href="javascript:void(0);" class="menu">
+			 <i class="fa-solid fa-bars"></i>
+		 </a>
+
 		 <div class="nav-menu">
-                         <a href="/" class="nav-link">HOME</a>
-                         <a href="/writeups/" class="nav-link">WRITEUPS</a>
-                         <a href="https://twitter.com/messages/compose?recipient_id=1241195067806605314" class="nav-link">CONTACT</a>
-                         <a href="/blog/" class="nav-link">BLOG</a>
+                         <a href="/" class="nav-link">Home</a>
+			 <a href="/cheatsheets/" class="nav-link">Cheatsheets</a>
+                         <a href="/writeups/" class="nav-link">Writeups</a>
+                         <a href="/blog/" class="nav-link">Blog</a>
+                         <a href="https://twitter.com/messages/compose?recipient_id=1241195067806605314" class="nav-link">Contact</a>
 		 </div>
 		
 		<a href="https://www.buymeacoffee.com/0zxyx">
@@ -51,6 +56,13 @@
 			 <a  href="#" class="nav-link">Tryhackme  Writeup</a>
 			 <a  href="#" class="nav-link">Tryhackme  Writeup</a>
 		 </div>
+
+		 <a href="#" class="gotop">
+			 <i class="fa-solid fa-arrow-up"></i>
+		 </a>
+
+		 <script src="/js/top.js"></script>
+		 <script src="/js/scroll.js"></script>
 
 	 </body>
  </html> 
