--- a/writeups/tryhackme/CyberHeroes.html
+++ b/writeups/tryhackme/CyberHeroes.html
@@ -17,12 +17,17 @@
 
         <h1 class="head">TryHackMe CyberHeroes Writeup</h1>
 
+        
+	<a href="javascript:void(0);" class="menu">
+                <i class="fa-solid fa-bars"></i>
+	</a>
 
         <div class="nav-menu">
-                <a href="/" class="nav-link">HOME</a>
-                <a href="/writeups" class="nav-link">WRITEUPS</a>
-                <a href="https://twitter.com/messages/compose?recipient_id=1241195067806605314" class="nav-link">CONTACT</a>
-                <a href="/blog" class="nav-link">BLOG</a>
+                <a href="/" class="nav-link">Home</a>
+		<a href="/cheatsheets/" class="nav-link">Cheatsheets</a>
+                <a href="/writeups" class="nav-link">Writeups</a>
+                <a href="/blog" class="nav-link">Blog</a>
+                <a href="https://twitter.com/messages/compose?recipient_id=1241195067806605314" class="nav-link">Contact</a>
         </div>
 
         <a href="https://www.buymeacoffee.com/0zxyx">
@@ -66,7 +71,7 @@
 
         <img class="sec-img" src="/img/thm/1/4.png">
 
-        <p class="sec-text">tried some common credentials but not luck.</p>
+        <p class="sec-text">tried some common credentials but no luck.</p>
 
         <p class="sec" >Let's see how this login function works</p>
         <hr class="sec-hr">
@@ -103,7 +108,7 @@
 	</a>
 
 
-        <script src="/js/main.js"></script>
+        <script src="/js/top.js"></script>
         <script src="/js/scroll.js"></script>
 
 
