--- a/writeups/hackthebox/index.html
+++ b/writeups/hackthebox/index.html
@@ -49,7 +49,7 @@
 
 
 		 <div class="wp-menu">
-			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
+			 <a  href="/writeups/hackthebox/MetaTwo.html" class="nav-link">Hackthebox MetaTwo Writeup</a>
 			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
 			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
 			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
