--- a/writeups/hackthebox/index.html
+++ b/writeups/hackthebox/index.html
@@ -50,7 +50,7 @@
 
 		 <div class="wp-menu">
 			 <a  href="/writeups/hackthebox/MetaTwo.html" class="nav-link">Hackthebox MetaTwo Writeup</a>
-			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
+			 <a  href="/writeups/hackthebox/Precious.html" class="nav-link">Hackthebox Precious Writeup</a>
 			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
 			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
 			 <a  href="#" class="nav-link">Hackthebox  Writeup</a>
