--- a/writeups/hackthebox/index.html
+++ b/writeups/hackthebox/index.html
@@ -8,7 +8,7 @@
                  <meta name="author" content="0zxyx">
 		 <link rel="stylesheet" href="/css/styles.css">
 		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		 <title> HackTheBox Writeups | 0zxyx.com</title>
 
 	 </head>
@@ -49,6 +49,7 @@
 
 
 		 <div class="wp-menu">
+			 <a  href="/writeups/hackthebox/MonitorsTwo.html" class="nav-link">Hackthebox MonitorsTwo Writeup</a>
 			 <a  href="/writeups/hackthebox/Interface.html" class="nav-link">Hackthebox Interface Writeup</a>
 			 <a  href="/writeups/hackthebox/Investigation.html" class="nav-link">Hackthebox Investigation Writeup</a>
 			 <a  href="/writeups/hackthebox/BroScience.html" class="nav-link">Hackthebox BroScience Writeup</a>
