--- a/syscalls.html
+++ b/syscalls.html
@@ -15,7 +15,7 @@
          <body>
 
 
-                 <h1 class="head">Linux Syscalls</h1>
+                 <h1 class="head">Linux 32/64 Syscalls</h1>
 
 		 <a href="javascript:void(0);" class="menu">
 			 <i class="fa-solid fa-bars"></i>
