--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		 <meta name="author" content="0zxyx">
                  <link rel="stylesheet" href="/css/styles.css">
                  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
                  <title>0zxyx.com | Home</title>
          </head>
@@ -45,6 +45,7 @@
                          <a  href="/cheatsheets/" class="nav-link">CheatSheets</a>
                          <a  href="/writeups/" class="nav-link">Writeups</a>
                          <a  href="/blog/" class="nav-link">Blog</a>
+                         <a  href="/syscalls.html" class="nav-link">Linux Syscalls</a>
                  </div>
 		 
 
