--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
                  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-                 <title>0zxyx.com | Home</title>
+                 <title>0zxyx | Home</title>
          </head>
 
          <body>
 
 
-                 <h1 class="head">0zxyx.com</h1>
+                 <h1 class="head">0zxyx</h1>
 
 		 <a href="javascript:void(0);" class="menu">
 			 <i class="fa-solid fa-bars"></i>
