--- a/writeups/hackthebox/index.html
+++ b/writeups/hackthebox/index.html
@@ -49,6 +49,7 @@
 
 
 		 <div class="wp-menu">
+			 <a  href="/writeups/hackthebox/Headless.html" class="nav-link">Hackthebox Headless Writeup</a>
 			 <a  href="/writeups/hackthebox/MonitorsTwo.html" class="nav-link">Hackthebox MonitorsTwo Writeup</a>
 			 <a  href="/writeups/hackthebox/Interface.html" class="nav-link">Hackthebox Interface Writeup</a>
 			 <a  href="/writeups/hackthebox/Investigation.html" class="nav-link">Hackthebox Investigation Writeup</a>
